<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coda</string>
    <string name="About">Hello, this is Coda - not for profit app for listening to the best radio stations.
        \n\n Fedor Tsyganov \n Founder/Developer/Designer\n \@fedor_tsyganov </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer Items -->
    <string name="drawer_playlist">Playlists</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_all">All Stations</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_dance">Dance</string>
    <string name="drawer_hiphop">Hip Hop</string>
    <string name="drawer_jazz">Jazz</string>
    <string name="drawer_classic">Classic</string>
    <string name="drawer_top_forty">Top 40</string>
    <string name="drawer_oldies">Old Hits</string>
    <string name="drawer_contemporary">Contemporary</string>
    <string name="drawer_lounge">Lounge</string>
    <string name="drawer_rock">Rock</string>
    <string name="drawer_alternative">Alternative</string>
    <string name="drawer_student">Student</string>
    <string name="drawer_country">Country</string>
    <!-- Navigation Drawer Items -->

    <!-- Buttons -->
    <string name="button_dialog_radios">Cancel</string>

    <!-- Settings items-->
    <string name="settings_wifi">Stream via Wi-Fi only</string>
    <string name="settings_share">Share App</string>
    <string name="settings_playlist">Sort Playlist</string>
    <string name="settings_sort">Sort Radio Stations</string>
    <string name="settings_timer">Set Sleep Timer</string>
    <string name="settings_alarm_days">Set Alarm Days</string>
    <string name="settings_about">About</string>
    <!-- Main Page Radio Information -->
    <string name="station_name">Name</string>
    <string name="station_country">Country</string>
    <string name="station_genre">Genre</string>
    <!-- Main Page Radio Information -->

    <string name="settings_dialog_wifi">To reduce carrier data charges, don\'t stream over mobile networks</string>
    <string name="settings_dialog_set_timer">Set sleep timer and fall asleep listening to beautiful music</string>
    <string name="settings_dialog_sort">Sort radio stations list</string>
    <string name="settings_dialog_sort_stations_az">By station name A-Z</string>
    <string name="settings_dialog_sort_stations_za">By station name Z-A</string>
    <string name="settings_dialog_sort_countries_az">By country name A-Z</string>
    <string name="settings_dialog_sort_countries_za">By country name Z-A</string>
    <string name="settings_dialog_sort_choice_stations_az">choice: station a-z</string>
    <string name="settings_dialog_sort_choice_stations_za">choice: station z-a</string>
    <string name="settings_dialog_sort_choice_countries_az">choice: country a-z</string>
    <string name="settings_dialog_sort_choice_countries_za">choice: country z-a</string>
    <!-- Alarm -->
    <string name="alarm_notification_title">Alarm</string>
    <string name="alarm_notification_big_text">Wake Up</string>
    <string name="alarm_notification_text">Tap Notification to Cancel</string>
    <string name="dialog_alarm">Set Alarm</string>
    <!--Dialogs-->
    <string name="dialog_close">Close</string>
    <string name="dialog_set_timer">Set Timer</string>
    <string name="dialog_timer_min">min</string>

    <string name="dialog_stations">CANCEL</string>
    <string name="dialog_playlist_action">Select Action</string>
    <string name="dialog_playlist_action_add">add to playlist</string>
    <string name="dialog_playlist_action_remove">remove from playlist</string>
    <string name="dialog_playlist_action_delete">Delete</string>
    <string name="dialog_playlist_action_rename">Rename</string>
    <string name="dialog_create_playlist_create">Create</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_rename_text">Set new name for the playlist</string>
    <string name="dialog_rename">Rename</string>
    <string name="dialog_remove_not_in_pl">Not in the playlist</string>
     <string name="dialog_remove">Select playlist</string>
    <string name="dialog_create_playlist_notext">Enter title</string>

    <!-- Playlist -->
    <string name="playlist">Playlist</string>
    <string name="playlist_dialog">Create New Playlist</string>
    <string name="playlist_dialog_hint">Title</string>
    <string name="playlist_station_counter_singular">station</string>
    <string name="playlist_station_counter_plural">stations</string>
    <string name="playlist_create">Create playlist</string>
    <string name="playlist_empty_state_main_text">No Playlists</string>
    <string name="playlist_empty_state_explanation_text">Create new playlist by clicking on a button with a plus sign</string>
    <string name="playlist_empty_state_stations_main_text">No Content</string>
    <string name="playlist_empty_state_stations_explanation_text">You can add station that you like by sliding station row to the left and clicking playlist button</string>
    <!-- Search -->
    <string name="fragment_search">Search</string>
    <string name="fragment_search_stations">STATIONS</string>
    <string name="fragment_search_countries">COUNTRIES</string>
    <string name="fragment_search_noresults">No search results</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_radio_list">RadioListActivity</string>
    <string name="title_activity_radio_player">RadioPlayerActivity</string>

    <string name="connection_checker_airplane_mode">Turn off Airplane Mode</string>
    <string name="connection_checker_wifi_notcnctd">Connect to Wi-Fi network</string>
    <string name="connection_checker_no_wifi">Turn on Wi-Fi to connect to the stream</string>

    <string name="notification_posted">Notification posted</string>

    <string name="preferences_key">com.tsyganov.iptest.togglebutton</string>
    <string name="preferences_wifi">com.tsyganov.iptest.wifi</string>
    <string name="preferences_sort_az">com.tsyganov.iptest.sortaz</string>
    <string name="preferences_sort_za">com.tsyganov.iptest.sortza</string>

    <string name="sleep_timer_title">Sleep Timer</string>
    <string name="sleep_timer_text">Tap to cancel sleep timer</string>

    <string name="coda_share_text">Check out Coda! Download app:</string>
    <string name="coda_share_via">Share Coda via</string>

    <string name="country_austria">Austria</string>
    <string name="country_belarus">Belarus</string>
    <string name="country_belgium">Belgium</string>
    <string name="country_bulgaria">Bulgaria</string>
    <string name="country_canada">Canada</string>
    <string name="country_croatia">Croatia</string>
    <string name="country_czechrepublic">Czech Republic</string>
    <string name="country_denmark">Denmark</string>
    <string name="country_estonia">Estonia</string>
    <string name="country_finland">Finland</string>
    <string name="country_france">France</string>
    <string name="country_germany">Germany</string>
    <string name="country_greece">Greece</string>
    <string name="country_hungary">Hungary</string>
    <string name="country_ireland">Ireland</string>
    <string name="country_italy">Italy</string>
    <string name="country_latvia">Latvia</string>
    <string name="country_lithuania">Lithuania</string>
    <string name="country_luxembourg">Luxembourg</string>
    <string name="country_macedonia">Macedonia</string>
    <string name="country_netherlands">Netherlands</string>
    <string name="country_norway">Norway</string>
    <string name="country_poland">Poland</string>
    <string name="country_russia">Russia</string>
    <string name="country_slovakia">Slovakia</string>
    <string name="country_slovenia">Slovenia</string>
    <string name="country_spain">Spain</string>
    <string name="country_sweden">Sweden</string>
    <string name="country_switzerland">Switzerland</string>
    <string name="country_ukraine">Ukraine</string>
    <string name="country_unitedkingdom">United Kingdom</string>
    <string name="country_usa">USA</string>

    <string-array name="usa_synonyms">
        <item>United States</item>
        <item>America</item>
    </string-array>

    <string-array name="unitedkingdom_synonyms">
        <item>UK</item>
        <item>England</item>
        <item>The Great Britain</item>
        <item>Britain</item>
    </string-array>

    <!-- Do not translate below -->
    <string name="banner_ad_unit_id">ca-app-pub-8544663458859969/7667458938</string>
    <string name="google_analytics_tracking_id">UA-40660764-3</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="coda_meta_data_num">la-nas-ppd-8347959503</string>
    <string name="title_activity_chat_test">ChatTest</string>

    <string name="hello_world">Hello world!</string>
    <!-- Do not translate above -->
    <string name="version">Version 1.0</string>
    <string name="libraries_used">Libraries used in application:
        \n\t- android-betterpickers
        \n\t- android-autofittextview
        \n\t- circularseekbar
        \n\t- SwipeMenuListView
        \n\t- TextDrawable
        \n\t- StikkyHeader</string>
    <string name="icon_credit">Stations icon created by Dmitry Mamaev</string>
</resources>
