<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <!-- <ImageView
        android:id="@+id/playerbkg"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="bottom"
        android:alpha="0.6"
        android:background="@drawable/backdown_two"/> -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        style="@android:style/Widget.ProgressBar.Large"
        />

    <ToggleButton
        android:id="@+id/buttonPlay"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/play_stop"
        android:checked="false"
        android:textOff=""
        android:textOn=""
        >
    </ToggleButton>

    <Button
        android:id="@+id/buttonPreviousStation"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/last_song_small"
        android:text=""
        />

    <Button
        android:id="@+id/buttonNextStation"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="80dp"
        android:background="@drawable/next_song_small"
        android:text=""
        />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="330dp"
        android:layout_gravity="center"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:background="@color/white"
            />
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvRName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="6dp"
            android:textColor="@color/grey_light"
            android:textStyle="italic"
            android:text="@string/station_name"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvRadioName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="56dp"
            android:layout_marginLeft="6dp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:text="@string/station_name"/>

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvRCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="6dp"
            android:textColor="@color/grey_light"
            android:textStyle="italic"
            android:text="@string/station_country"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvRadioCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="6dp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:text="@string/station_country"/>

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvRadioGanre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:text="@string/station_genre"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvRGanre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/grey_light"
            android:textStyle="italic"
            android:text="@string/station_genre"/>
    </RelativeLayout>
</FrameLayout>
